src/test/resources/semantic_errors/redefine_builtin_different_signature.notc
// Overloading not supported

int readInt(bool b) {}

void main() {
}
